# MicroGrowLinkService

./: .gitignore  CLAUDE.md  README.md  app.py  config.py  pyproject.toml  requirements.txt  setup.py
data/: isolation_source_hierarchy.json
scripts/: build_isolation_source_hierarchy.py
src/: assess.py  feature_utils.py  information_content_assessment.py  predict.py  similar_taxa.py  taxon_lookup.py  ui_components.py
src/models/: __init__.py  feature_encoder.py  feature_profile.py  kogut_model.py
