[project]
name = "microgrowlink-service"
version = "0.1.0"
description = "Gradio web application for predicting microbial growth media using KOGUT model"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "KG-Microbe Team"}
]

dependencies = [
    # Web Interface
    "gradio>=4.0.0",

    # Data Processing
    "pandas>=2.2.3",

    # Database for querying knowledge graph
    "duckdb>=0.10.0",

    # Machine Learning (KOGUT model)
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/realmarcin/MicroGrowLinkService"
Repository = "https://github.com/realmarcin/MicroGrowLinkService"

[project.scripts]
microgrowlink-service = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
